# unima-srhp

./: .gitignore  README.md  app.py  pyproject.toml
client/: package-lock.json  package.json
client/app/: layout.tsx
client/app/_types/: product.ts
client/app/business/: aiPage.tsx  page.tsx  publicPage.tsx
client/app/business/_components/: addProduct.tsx  viewProductPopup.tsx
client/app/lib/: axios.ts
src/: config.py
src/core/: __init__.py  avl_node.py  avl_tree.py  config.py
src/db/: config.py
src/model/: __init__.py  category.py  product.py  status_product.py
src/modules/business/: __init__.py  performance_analyzer.py  recommendation_system.py  routes.py
src/modules/category/: routes.py
src/modules/product/: routes.py
tests/: conftest.py  test_avl_complexity.py  test_avl_performance.py  test_avl_rotations.py  test_avl_tree.py
